grammar.js
    source_file: $ => repeat(
      choice($._terminator, $.shebang, $.inner_attribute, $._statement),
    ),

    // [gram.lex.shebang] — trivia line; only meaningful at offset 0,
    // and never when `[` follows the `#!`: `#![…]` is the file-wide
    // attribute opener ([gram.attr.index]).
    shebang: _ => token(/#!([^\[\r\n][^\r\n]*)?/),

    // ============================================ trivia [gram.lex.comment]

    _terminator: $ => choice(';', $._newline),
    _statement: $ => choice(
      $.function_item,
      $.struct_item,
      $.enum_item,
      $.type_item,
      $.trait_item,
      $.impl_item,
      $.use_declaration,
      $.import_c_declaration,
      $.let_declaration,
      $.var_declaration,
      $.const_declaration,
      $.error_item,
      $.assignment_statement,
      $.defer_statement,
      $.assume_statement,
      $.expression_statement,
    ),

    expression_statement: $ => seq(repeat($.attribute), $._expression),

    // Assignment is a statement, not an expression [gram.expr.assign].
    // `place` is any expression; place-ness is sema's check, not grammar's.
    //
    // The second arm is the one moded store (s182, wolf-lang#438, v0.2.17):
    // a plain `=` whose place is a container element may spell `take` on
    // its right-hand side — `xs[i] = take v`, `m[k] = take v` — and
    // nowhere else in an assignment may a mode appear. `x = take v`,
    // `s.f = take v`, `xs[0].f = take v` and every compound operator's
    // right-hand side stay ERROR nodes, as they stay E0201 in the
    // compiler. The left is `index_expression` because that is exactly
    // the compiler's test (`crates/wolf_parse/src/exprs.rs`: plain `=`,
    // a `BracketApply` head, then `Kw(Take)`) — the one postfix bracket
    // shape of [gram.amb.brackets]; whether the bracket is a container is
    // sema's. `take` is a token of the statement, not an expression and
    // not a `parameter_mode` (which would admit `mut`), so it is an
    // anonymous token under a `mode` field: no new node type, and
    // highlights.scm already paints `"take"`.
    assignment_statement: $ => choice(
      seq(
        repeat($.attribute),
        field('left', $._expression),
        field('operator', choice(
          '=', '+=', '-=', '*=', '/=', '%=',
          '&=', '|=', '^=', '<<=', '>>=',
        )),
        field('right', $._expression),
      ),
      // No dynamic precedence: tl13 needed `prec.dynamic(1, …)` here while
      // `take` was contextual, because `xs[0] = take (v)` also read as a
      // call `take(v)` and GLR picked the call inside a block. With `take`
      // reserved (#20, the `reserved` sets above) the call reading cannot
      // start, so the moded arm is the only one.
      seq(
        repeat($.attribute),
        field('left', $.index_expression),
        field('operator', '='),
        field('mode', 'take'),
        field('right', $._expression),
      ),
    ),

    visibility_modifier: _ => seq('pub', optional(seq('(', 'pkg', ')'))),

    // -------------------------------------------- imports [gram.item.use]

    use_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'use',
      $.use_path,
      optional(seq('as', field('alias', $.identifier))),
    ),

    use_path: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
      optional(seq('.', $.use_group)),
    ),

    use_group: $ => seq('{', commaSep1($.identifier), '}'),

    import_c_declaration: $ => seq(
      repeat($.attribute),
      'import',
      'c',
      field('header', $.string_literal),
    ),

    // ------------------------------------------ functions [gram.item.fn]

    function_item: $ => prec.right(seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      repeat($.function_qualifier),
      'fn',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional(field('body', $.block)),   // bodyless: extern / trait member
    )),

    function_qualifier: $ => choice(
      'comptime',
      seq('extern', $.string_literal),
      'export',
    ),

    generic_parameters: $ => seq('[', commaSep1($.generic_parameter), ']'),

    generic_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('bound', $._generic_bound))),
    ),

    _generic_bound: $ => choice(
      alias('type', $.type_keyword),   // `T: type` — comptime type param
      $.trait_bound,
    ),

    trait_bound: $ => seq($.path, repeat(seq('+', $.path))),

    parameters: $ => seq('(', commaSep($._parameter), ')'),

    _parameter: $ => choice($.parameter, $.self_parameter),

    parameter: $ => seq(
      optional($.parameter_mode),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    // `self` is contextual: a keyword only in receiver position.
    self_parameter: $ => seq(
      optional($.parameter_mode),
      alias('self', $.self),
      optional($.view_set),
    ),

    // `mut self.{x, y}` — field-granular exclusivity.
    view_set: $ => seq('.', '{', commaSep1($.identifier), '}'),

    parameter_mode: _ => choice('mut', 'take'),

    // ------------------------------- bindings & constants [gram.item.let]

    // D63 comma groups: one keyword, several *complete* binders — each
    // with its own pattern, optional ascription, and initializer
    // (`var i = 0, c = 1`). Unambiguous by construction: every binder
    // has its own `=`, and wolf has no unparenthesized tuple
    // expressions, so a comma at statement depth begins the next binder.
    let_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'let',
      $.binder,
      repeat(seq(',', $.binder)),
    ),

    var_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'var',
      $.binder,
      repeat(seq(',', $.binder)),
    ),

    binder: $ => seq(
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    const_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'const',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    // ---------------------------------------------- types [gram.item.type]

    type_item: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'type',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      '=',
      field('body', choice(
        $.struct_definition,
        $.enum_definition,
        $._type,               // includes `distinct T` via prefixed_type
      )),
    ),

    // `error IoErrors = {none, parse}` — s158 (wolf-lang#36),
    // [gram.item.error]. The name is TRANSPARENT: it is not a type and
    // has no identity a program can observe, so `-> int ! IoErrors` and
    // `-> int ! {none, parse}` are the same type. That is sema's; the
    // grammar just names a row.
    //
    // `error` is CONTEXTUAL, never reserved ([gram.inv.ctx]) — the
    // keyword only in item position with an IDENT and an `=` after it.
    // It rides `word: $ => $.identifier` the way `then` does, but it is
    // NOT the same situation and the difference is the whole risk here:
    // `then`'s admitting state (after a complete `if` condition) admits
    // no identifier at all, whereas statement start admits both this
    // keyword and `expression_statement`'s leading identifier. See the
    // `error` stays an identifier test in items.txt for what that
    // actually costs.
    error_item: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      alias($._error_item_keyword, 'error'),
      field('name', $.identifier),
      '=',
      field('row', $.error_row),
    ),

    struct_definition: $ => seq('struct', $.field_declaration_list),
    struct_item: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'struct',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      field('body', $.field_declaration_list),
    ),

    enum_item: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'enum',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      field('body', $.enum_variant_list),
    ),

    // Fields are newline-separated declarations, per-field `','?`.
    field_declaration_list: $ => seq('{', repeat($.field_declaration), '}'),

    field_declaration: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(','),
    ),

    // Variants are comma-punctuated alternatives (commas relaxed here).
    enum_variant_list: $ => seq(
      '{',
      repeat(seq($.enum_variant, optional(','))),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq('(', commaSep1($._type), ')')),
    ),

    // -------------------------------------- traits & impls [gram.item.trait]

    // s155 gave `trait` a second shape, the alias bound:
    //
    //   trait_item ::= 'trait' IDENT generics?
    //                  ('{' trait_member* '}' | '=' bound TERM?)
    //
    // `trait Num = Add + Sub + Mul` names every trait in its list. The
    // right-hand side is the same `bound ::= path ('+' path)*` a generic
    // parameter takes, so it is the same node; the optional TERM rides
    // the enclosing statement repeat, as every other `TERM?` item does.
    trait_item: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'trait',
      field('name', $.identifier),
      optional(field('type_parameters', $.generic_parameters)),
      choice(
        field('body', $.declaration_list),
        seq('=', field('bound', $.trait_bound)),
      ),
    ),

    impl_item: $ => seq(
      repeat($.attribute),
      optional($.visibility_modifier),
      'impl',
      optional(field('type_parameters', $.generic_parameters)),
      field('type', $._type),
      optional(seq('for', field('for_type', $._type))),
      field('body', $.declaration_list),
    ),

    declaration_list: $ => seq(
      '{',
      repeat(choice(
        $.function_item,
        $.type_item,
        $.const_declaration,
        $._terminator,
      )),
      '}',
    ),

    // --------------------------------------- attributes [gram.item.attr]

    attribute: $ => seq('#[', commaSep1($.attr_item), ']'),

    // [gram.attr.index] — the file-wide form (`#![index(1)]`). The
    // spec confines it to the top of the file (E0211 elsewhere), a
    // position this superset grammar does not enforce.
    inner_attribute: $ => seq('#![', commaSep1($.attr_item), ']'),

    attr_item: $ => seq(
      $.path,
      optional(choice(
        seq('(', commaSep($._attr_arg), ')'),
        seq('=', $._literal),
      )),
    ),

    _attr_arg: $ => choice($.attr_item, $._literal),

    // ================================================== types [gram.type]

    _type: $ => choice(
      $.type_path,
      $.error_union_type,
      $.rowed_type,
      $.aliased_error_type,
      $.prefixed_type,
      $.pointer_type,
      $.dyn_type,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      alias('type', $.type_keyword),      // the type of types (comptime)
      alias('region', $.region_type),     // first-class regions (X4)
    ),

    type_path: $ => prec.right(seq($.path, optional(field('type_arguments', $.type_arguments)))),

    path: $ => prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),

    // `!T` — error union with inferred private row (D30).
    error_union_type: $ => prec.right(1, seq('!', $._type)),

    // `T ! {row}` — postfix row, first-class in every type position;
    // nested rows flatten ([gram.type.row.flatten], D51).
    error_row: $ => seq(
      '{',
      optional(commaSep1(choice($.row_entry, alias('..', $.open_row)))),
      '}',
    ),

    row_entry: $ => seq(
      $.path,
      optional(seq('(', commaSep1($._type), ')')),
    ),

    // `shared Config`, `handle Node`, `weak Parent`, `distinct Song`.
    prefixed_type: $ => prec.right(seq(
      field('modifier', choice('shared', 'handle', 'weak', 'distinct')),
      $._type,
    )),

    pointer_type: $ => prec.right(seq('*', $._type)),   // raw pointer, unsafe tier

    type_arguments: $ => seq('[', commaSep1($._type_arg), ']'),

    // Const generics: `type | expr`, disambiguated in sema [gram.type].
    _type_arg: $ => choice($._type, $._expression),

    // ================================================ patterns [gram.pat]

    _pattern: $ => choice($._closed_pattern, $.or_pattern),

    path_pattern: $ => field('type', alias($._dotted_path, $.path)),

    _dotted_path: $ => seq($.identifier, repeat1(seq('.', $.identifier))),

    tuple_pattern: $ => seq('(', commaSep1($._pattern), ')'),

    constructor_pattern: $ => seq(
      field('type', $.path),
      '(',
      commaSep1($._pattern),
      ')',
    ),

    // [gram.pat.struct] (s129, #179): `Point { x, y: (a, b), .. }`.
    // Shorthand `x` binds the field's value under the field's own name;
    // a trailing `..` ignores every unnamed field. The production
    // requires at least one field_pat — a pattern that would ignore
    // every field is spelled `_` (the spec's word, not an omission).
    //
    // D67 (v0.2.2): the separator is REQUIRED throughout the pattern
    // family, and `..` follows a separator like one more member — the
    // production's tail is exactly `(',' '..'?)?`, so `Point { x, .. }`
    // parses, `Point { x, }` parses, and `Point { x .. }` does not.
    // That last spelling was le04's known gap: wolfgang accepted it as
    // an unlicensed recovery-loop accident, D67 ruled the production
    // the law, and s131 landed the tightening. `Point { x y }` and
    // `(a b)` — D67's other two named laxities — already ERRORed here.
    struct_pattern: $ => seq(
      field('type', $.path),
      '{',
      $.field_pattern,
      repeat(seq(',', $.field_pattern)),
      optional(seq(',', optional(alias('..', $.rest_pattern)))),
      '}',
    ),

    field_pattern: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('pattern', $._pattern))),
    ),

    block: $ => seq(
      '{',
      repeat(choice($._terminator, seq($._statement, $._terminator))),
      optional($._statement),
      '}',
    ),

    // --------------------------------- operators & climb [gram.expr.prec]

    reference_expression: $ => prec(PREC.UNARY, seq(
      '&',
      optional('mut'),
      field('operand', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        [PREC.MUL, choice('*', '/', '%')],
        [PREC.ADD, choice('+', '-')],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.BITAND, '&'],
        [PREC.BITXOR, '^'],
        [PREC.BITOR, '|'],
        [PREC.COMPARE, choice('==', '!=', '<', '>', '<=', '>=', '<=>')],
        [PREC.AND, '&&'],
        [PREC.OR, '||'],
      ];
      return choice(...table.map(([p, op]) => prec.left(p, seq(
        field('left', $._expression),
        field('operator', op),
        field('right', $._expression),
      ))));
    },

    call_expression: $ => prec(PREC.POSTFIX, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // Call-site modes (X1): `f(mut x)`, `f(take conn)`.
    arguments: $ => seq('(', commaSep($.argument), ')'),

    struct_expression: $ => prec.dynamic(1, seq(
      field('name', $.type_path),
      field('body', $.field_initializer_list),
    )),
