test/corpus/patterns.txt
==================
struct pattern binders
==================

let Point { x, y } = p
var Point { x: px, .. } = q

---

(source_file
  (let_declaration
    (binder
      (struct_pattern
        (path
          (identifier))
        (field_pattern
          (identifier))
        (field_pattern
          (identifier)))
      (identifier)))
  (var_declaration
    (binder
      (struct_pattern
        (path
          (identifier))
        (field_pattern
          (identifier)
          (identifier))
        (rest_pattern))
      (identifier))))

==================
nested struct pattern in a binder
==================

let Line { a: Point { x, .. }, b } = l

---

(source_file
  (let_declaration
    (binder
      (struct_pattern
        (path
          (identifier))
        (field_pattern
          (identifier)
          (struct_pattern
            (path
              (identifier))
            (field_pattern
              (identifier))
            (rest_pattern)))
        (field_pattern
          (identifier)))
      (identifier))))

==================
struct patterns in match arms
==================

match p {
    Point { x: 0, y } => y
    Point { x, .. } => x
}

---

(source_file
  (expression_statement
    (match_expression
      (identifier)
      (match_body
        (match_arm
          (struct_pattern
            (path
              (identifier))
            (field_pattern
              (identifier)
              (integer_literal))
            (field_pattern
              (identifier)))
          (identifier))
        (match_arm
          (struct_pattern
            (path
              (identifier))
            (field_pattern
              (identifier))
            (rest_pattern))
          (identifier))))))

==================
struct pattern in a for header
==================

for Point { x, .. } in ps {
    print("{x}")
}

---

(source_file
  (expression_statement
    (for_expression
      (struct_pattern
        (path
          (identifier))
        (field_pattern
          (identifier))
        (rest_pattern))
      (identifier)
      (block
        (expression_statement
          (call_expression
            (identifier)
            (arguments
              (argument
                (string_literal
                  (interpolation
                    (identifier)))))))))))

==================
D67: `..` follows a separator like one more member
==================

let Point { x, .. } = ok
let Point { x .. } = bad

---

(source_file
  (let_declaration
    (binder
      pattern: (struct_pattern
        type: (path
          (identifier))
        (field_pattern
          name: (identifier))
        (rest_pattern))
      value: (identifier)))
  (let_declaration
    (binder
      pattern: (struct_pattern
        type: (path
          (identifier))
        (field_pattern
          name: (identifier))
        (ERROR))
      value: (identifier))))

==================
D67: the separator is required throughout the pattern family (E0201 shapes)
==================

fn m() {
    match p {
        Point { x .. } => 1
        Point { x y } => 2
        (a b) => 3
        Some(a b) => 4
    }
}

---

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block
      (expression_statement
        (match_expression
          value: (identifier)
          body: (match_body
            (match_arm
              pattern: (struct_pattern
                type: (path
                  (identifier))
                (field_pattern
                  name: (identifier))
                (ERROR))
              body: (integer_literal))
            (match_arm
              pattern: (struct_pattern
                type: (path
                  (identifier))
                (field_pattern
                  name: (identifier))
                (ERROR
                  (identifier)))
              body: (integer_literal))
            (match_arm
              pattern: (tuple_pattern
                (identifier)
                (ERROR
                  (identifier)))
              body: (integer_literal))
            (match_arm
              pattern: (constructor_pattern
                type: (path
                  (identifier))
                (identifier)
                (ERROR
                  (identifier)))
              body: (integer_literal))))))))

==================
s157: a bare dotted path is a pattern, and a lone identifier still is not one
==================

fn name(c: Color) -> str {
    match c {
        Color.Red => "red",
        Color.Blue(shade) => "blue",
        none => "tag",
        _ => "other",
    }
}

---

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_path
          (path
            (identifier)))))
    (type_path
      (path
        (identifier)))
    (block
      (expression_statement
        (match_expression
          (identifier)
          (match_body
            (match_arm
              (path_pattern
                (path
                  (identifier)
                  (identifier)))
              (string_literal))
            (match_arm
              (constructor_pattern
                (path
                  (identifier)
                  (identifier))
                (identifier))
              (string_literal))
            (match_arm
              (identifier)
              (string_literal))
            (match_arm
              (wildcard_pattern)
              (string_literal))))))))
